--- a/index.css
+++ b/index.css
@@ -89,6 +89,9 @@ input { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
     color: #f39c12;                 /* Yellow color on hover */
   }
   
+#nav-links {
+    display: none;
+}
 
 #bill-section {
     margin: 30px auto;
