--- a/index.css
+++ b/index.css
@@ -168,3 +168,40 @@ input { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
 .done-btn:hover {
     background-color: #27ae60;
 }
+
+
+.section {
+    margin: 20px 0;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+.input-group {
+    margin-bottom: 10px;
+}
+
+.button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    background-color: hwb(122 36% 40%);
+    color: white;
+    cursor: pointer;
+}
+.section p {
+    margin-top: 15px;
+    font-size: 14px;
+    color: #333;
+}
+
+.section a {
+    color: #27ae60;
+    text-decoration: none;
+}
+
+.section a:hover {
+    text-decoration: underline;
+    color: #2ecc71;
+}
